--- a/backbone/test3/index.html
+++ b/backbone/test3/index.html
@@ -28,7 +28,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <a class="navbar-brand" href="http://www.gigasciencejournal.com">
-                <img alt="GigaScience" height="20" src="imgs/G.png">
+                <img alt="GigaScience" height="20" src="img/G.png">
             </a>
             <ul class="nav navbar-nav">
                 <li class="dropdown">
@@ -63,29 +63,8 @@
                     </ul>
                 </li>
             </ul>
-            <form class="navbar-form navbar-right form-inline center-block"
-                  action="/" method="POST" enctype="multipart/form-data">
-                <div class="input-group">
-                    <label id="browsebutton"
-                           class="btn btn-default input-group-addon"
-                           for="my-file-selector"
-                           style="background-color:white">
-                        <input id="my-file-selector" type="file"
-                               style="display:none;">
-                        Select file
-                    </label>
-                    <input type="text" class="form-control" readonly="">
-                </div>
-                <button id="submit" type="submit" class="btn btn-primary">
-                    Submit
-                </button>
 
-                <button id="loadExampleHtmlButton" type="submit" class="btn btn-primary">
-                    Load example workflow
-                </button>
-
-            </form>
-
+            <div id="navbar_right_container">a</div>
         </div>
         <!-- /.navbar-collapse -->
     </div>
@@ -97,12 +76,6 @@
 <div class="container">
     <div id="app-body">
         <section id="todoapp">
-            <!--
-            <header id="header">
-                <h1>todos</h1>
-            </header>
-            <footer id="footer"></footer>
-            -->
             <div id="cy" data-galaxy_wf_id="f2db41e1fa331b3e"
                  data-galaxy_history_id="0b37776e18390093"></div>
             <div id="loading">
@@ -114,18 +87,34 @@
 
 <!-- Footer -->
 <div class="container">
-    <!--
-    <div id="info">
-        <p>Double-click to edit a todo</p>
-        <p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
-        <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-    </div>
-    -->
-
     <footer>
         <p>Copyright &copy; GigaScience 2015.</p>
     </footer>
 </div>
+
+<script type="text/template" id="navbar_right_template">
+    <form class="navbar-form navbar-right form-inline center-block"
+          action="/" method="POST" enctype="multipart/form-data">
+        <div class="input-group">
+            <label id="browsebutton"
+                   class="btn btn-default input-group-addon"
+                   for="my-file-selector"
+                   style="background-color:white">
+                <input id="my-file-selector" type="file"
+                       style="display:none;">
+                Select file
+            </label>
+            <input type="text" class="form-control" readonly="">
+        </div>
+        <button id="submit" type="submit" class="btn btn-primary">
+            Submit
+        </button>
+
+        <button id="loadExampleHtmlButton" type="submit" class="btn btn-primary">
+            Load example
+        </button>
+    </form>
+</script>
 
 <script type="text/template" id="cys-template">
     <div class="container">
@@ -149,48 +138,17 @@
     <p>From cys-template</p>
 </script>
 
-<script type="text/template" id="stats-template">
-    <span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
-    <ul id="filters">
-        <li>
-            <a class="selected" href="#/">All</a>
-        </li>
-        <li>
-            <a href="#/active">Active</a>
-        </li>
-        <li>
-            <a href="#/completed">Completed</a>
-        </li>
-    </ul>
-    <% if (completed) { %>
-    <button id="clear-completed">Clear completed (<%= completed %>)</button>
-    <% } %>
-
-    <p>From stats-template</p>
-</script>
-
-
-<script type="text/template" id="item-template"></script>
-<script type="text/template" id="stats-template"></script>
 <script src="js/lib/dagre.js"></script>
 <script src="js/lib/cytoscape.js"></script>
 <script src="js/lib/bluebird-min-1.2.2.js"></script>
-
 <script src="js/lib/jquery-1.11.3.min.js"></script>
 <script src="js/lib/bootstrap.min.js"></script>
 <script src="js/lib/underscore-min.js"></script>
 <script src="js/lib/backbone-min.js"></script>
 <script src="js/lib/backbone.localStorage.js"></script>
+<script src="js/views/right-navbar-view.js"></script>
 <script src="js/views/app-view.js"></script>
+<script src="js/models/cytoscape-workflow.js"></script>
 <script src="js/app.js"></script>
-
-<!--
-<script src="js/models/todo.js"></script>
-<script src="js/collections/todos.js"></script>
-<script src="js/views/todo-view.js"></script>
-<script src="js/routers/router.js"></script>
--->
-
-
 </body>
 </html>
