Add load example workflow functionality

--- a/backbone/test3/index.html
+++ b/backbone/test3/index.html
@@ -106,7 +106,7 @@
             </label>
             <input type="text" class="form-control" readonly="">
         </div>
-        <button id="submit" type="submit" class="btn btn-primary">
+        <button id="submitButton" type="submit" class="btn btn-primary">
             Submit
         </button>
 
