Add functionality to parse and display a galaxy workflow file

--- a/backbone/test3/index.html
+++ b/backbone/test3/index.html
@@ -96,6 +96,7 @@
                                for="my-file-selector"
                                style="background-color:white">
                             <input id="my-file-selector" type="file"
+                                   name="file" enctype="multipart/form-data"
                                    style="display:none;">
                             Select file
                         </label>
